# resource-tuner-unittest

./: AppConfigs_8h_source.html  AuxRoutines_8h_source.html  CMakeLists.txt  ClientDataManager_8h_source.html  ClientGarbageCollector_8h.html  ClientGarbageCollector_8h_source.html  CocoTable_8h.html  CocoTable_8h_source.html  Common_8h_source.html  ComponentRegistry_8h_source.html  CoreAPIsExamples_8c-example.html  CoreAPIsExamples_8c_source.html  CoreAPIsExamples_8cpp-example.html  CoreAPIsExamples_8cpp_source.html  ErrCodes_8h.html  ErrCodes_8h_source.html  ExtFeaturesRegistry_8h_source.html  Ext_Feature_Configs-example.html  Init_Configs-example.html  Message_8h_source.html  Plugin_8cpp-example.html  Plugin_8cpp_source.html  PropertiesRegistry_8h_source.html  Properties_Configs-example.html  PulseMonitor_8h.html  PulseMonitor_8h_source.html  README.md  RateLimiter_8h.html  RateLimiter_8h_source.html  Relay_8cpp-example.html  Relay_8cpp_source.html  RequestManager_8h_source.html  RequestQueue_8h_source.html  RequestReceiver_8h_source.html  Request_8h_source.html  ResourceRegistry_8h_source.html  Resource_8h_source.html  Resource_Configs-example.html  RestuneInternal_8h.html  RestuneInternal_8h.js  (+163 more)
.github/workflows/: pr.yml
client/: CMakeLists.txt  ClientCLI.cpp
client/APIs/: UrmAPIs.cpp
client/APIs/Include/: UrmAPIs.h
client/Comm/Socket/: SocketClient.cpp
configs/: CMakeLists.txt  InitConfig.yaml  PropertiesConfig.yaml  ResourcesConfig.yaml
contextual-classifier/: CMakeLists.txt  ContextualClassifier.cpp  Extensions.cpp  FeatureExtractor.cpp  FeaturePruner.cpp  MLInference.cpp  NetLinkComm.cpp  PostProcessing.cpp
contextual-classifier/Configs/: classifier-blocklist.txt  ignore-tokens.txt
contextual-classifier/Include/: ContextualClassifier.h  Extensions.h  FeatureExtractor.h  FeaturePruner.h  MLInference.h  NetLinkComm.h
debian/: qcom-systune.postinst  resource-tuner.install  urm.service
docs/: Doxyfile  EXTENSIONS.md  FEATURES.md  HOW-TO.md  README.md
docs/Examples/: CoreAPIsExamples.c  CoreAPIsExamples.cpp  README.md  SignalAPIsExamples.cpp
docs/Examples/Extensions/: Plugin.cpp
extensions/Include/: Extensions.h
modula/: CMakeLists.txt
modula/Common/: Request.cpp  Signal.cpp
modula/Common/Include/: Common.h  Utils.h
modula/Components/: DLManager.cpp  Logger.cpp
modula/CoreModules/: AuxRoutines.cpp  ComponentRegistry.cpp  UrmSettings.cpp
modula/CoreModules/Include/: AuxRoutines.h  ComponentRegistry.h  UrmSettings.h
public_headers/: config.yml
resource-tuner/: CMakeLists.txt  README.md
resource-tuner/Tests/: CMakeLists.txt
resource-tuner/Tests/Component/: RequestQueueTests_catch.cpp  Trigger_catch.cpp
resource-tuner/Tests/unit/: test_main.cpp  test_req_queue_cleanup.cpp  test_req_queue_tune_non_terminal.cpp  test_req_queue_tune_terminal.cpp  test_server_requests.cpp
resource-tuner/core/: ClientDataManager.cpp  ClientGarbageCollector.cpp  CocoTable.cpp  PropertiesRegistry.cpp  PulseMonitor.cpp  RateLimiter.cpp  RequestHandler.cpp  RequestManager.cpp  RequestQueue.cpp  ResourceHooks.cpp  ResourceRegistry.cpp  TargetRegistry.cpp
resource-tuner/core/Include/: ClientDataManager.h  ClientGarbageCollector.h  CocoTable.h  PropertiesRegistry.h  RateLimiter.h  RequestManager.h  RequestQueue.h  ResourceRegistry.h  RestuneInternal.h  TargetRegistry.h
resource-tuner/core/Server/: RequestReceiver.cpp  RestuneListener.cpp
resource-tuner/core/Server/Include/: RestuneListener.h
resource-tuner/extensions/: Extensions.cpp  StateDetector.cpp
resource-tuner/extensions/Include/: Extensions.h
resource-tuner/init/: RestuneInit.cpp  RestuneParser.cpp
resource-tuner/init/Include/: RestuneParser.h
resource-tuner/signals/: ExtFeatureMapper.cpp  ExtFeaturesRegistry.cpp  SignalHandler.cpp  SignalRegistry.cpp
resource-tuner/signals/Include/: ExtFeaturesRegistry.h  SignalExtFeatureMapper.h  SignalInternal.h  SignalRegistry.h
resource-tuner/tests/: CMakeLists.txt
resource-tuner/tests/Component/: ClientDataManagerTests.cpp  CocoTableTests.cpp  DeviceInfoTests.cpp  ExtensionIntfTests.cpp  MemoryPoolTests.cpp  MiscTests.cpp  ParserTests.cpp  RateLimiterTests.cpp  RequestMapTests.cpp  RequestQueueTests.cpp  RequestQueueTests_catch.cpp  SafeOpsTests.cpp  ThreadPoolTests.cpp  TimerTests.cpp  Trigger.cpp  Trigger_catch.cpp  catch2_main_component.cpp
resource-tuner/tests/Configs/: Baseline.yaml  ExtFeaturesConfig.yaml  InitConfig.yaml  InvalidSyntax.yaml  PropertiesConfig.yaml  ResourcesConfig.yaml  ResourcesConfigAddOn.yaml  SignalsConfig.yaml  SignalsConfigAddOn.yaml  TargetConfigDup.yaml
resource-tuner/tests/Integration/: IntegrationTests.cpp  StateDetectionTests.cpp
resource-tuner/tests/Utils/: Baseline.cpp  Setup.cpp  TestAggregator.cpp
resource-tuner/tests/Utils/Include/: TestAggregator.h  TestBaseline.h  TestUtils.h
resource-tuner/tests/unit/: test_main.cpp  test_req_queue_cleanup.cpp  test_req_queue_tune_non_terminal.cpp  test_req_queue_tune_terminal.cpp  test_server_requests.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  enumvalues_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_a.js  (+2 more)
tests/contextual-classifier/Integration/: IntegrationTests.cpp
